# axum_todo

./: .env_template  .gitignore  LICENSE  README.md  code.sh  devcontainer_build.sh  docker-compose.dev.yml  docker-compose.prod.yml  down.sh  lima-axum_todo.yaml  tool_for_lima.sh  up.sh  vscodevim_settings.sh
.devcontainer/: devcontainer.json  docker-compose.yml
axum_todo/: Cargo.toml  Dockerfile  Dockerfile.prod
axum_todo/scripts/: setup-rust-devenv.sh  setup-rust-web.sh
axum_todo/src/: main.rs
axum_todo/src/api/: users.rs
axum_todo/src/db/: mod.rs
axum_todo/src/db/handlers/: create_todo.rs  delete_todo.rs  mod.rs  read_todo.rs  update_todo.rs  validated_json.rs
axum_todo/src/db/repositories/: mod.rs  todo_repository.rs  todo_repository_for_memory.rs
axum_todo/src/pages/: index.rs
