[package]
name = "axum_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
axum-macros = "0.3.7"
hyper = { version = "0.14.25", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
